# jose

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTRIBUTING.md  Cargo.toml  README.md  architecture.html  biome.jsonc  cross-schema-analysis.md  design-standard-schema.html  lumber-schema_1.html  package.json  reference-library.html  solver-schema_1.html  tsconfig.base.json  turbo.json  unified-model.json  unified-schema.html
.agents/skills/product-design/: AGENTS.md  SKILL.md
.agents/skills/product-design/exemplars/: pr-space-first-drawing-ux.md
.agents/skills/product-design/references/: copy.md  coverage-gaps.md  glossary.md  interface-quality.md  patterns.md  product-judgment.md  resilience.md  rules.md  surfaces-3d-view.md  surfaces-app-shell.md  surfaces-plan-view.md  surfaces.md  web-interface-guidelines.md
.agents/skills/vercel-react-best-practices/: LICENSE  SKILL.md  jose-scope.md
.claude/commands/: ci-local.md  react-best-practices.md  web-interface-guidelines.md
.github/workflows/: ci.yml  ui-review.yml
apps/api/: README.md  package.json
apps/api/src/: app.test.ts  app.ts  config.ts  index.ts
apps/api/src/db/: schema.ts
apps/api/src/ports/: blob-store.ts  snapshot-store.ts
apps/web/: CONTEXT.md  README.md  index.html  package.json  serve.ts  tsconfig.json  tsconfig.worker.json  vite.config.ts
apps/web/src/: app.css  app.tsx  engine-store.ts  engine-worker.ts  footprint-edit.test.ts  footprint-edit.ts  hud.test.ts  hud.ts  main.ts  main.tsx  mass-tessellation.test.ts  mass-tessellation.ts  member-tessellation.test.ts  member-tessellation.ts  plan-camera.test.ts  plan-camera.ts  plan-selection.test.ts  plan-selection.ts  plan-snap.test.ts  plan-snap.ts  plan-view.tsx  protocol.ts  rejection.test.ts  rejection.ts  render.ts  three-view.tsx  tool-chrome.test.ts  tool-chrome.ts  value-box.tsx
apps/web/src/wasm/: engine.d.ts
crates/bim-core/: Cargo.toml
crates/bim-core/src/: buffer.rs  command.rs  lib.rs  session.rs
crates/bim-wasm/: Cargo.toml
crates/bim-wasm/src/: lib.rs
crates/building/: Cargo.toml
crates/building/examples/: corner_dump.rs
crates/building/src/: keys.rs  lib.rs
crates/building/src/application/: framing_solver.rs  junction_detail.rs  junction_detector.rs  mod.rs
crates/building/src/domain/: assemblies.rs  mod.rs  placement.rs  role.rs  spacing.rs  wall.rs
crates/cut-optimization/: Cargo.toml
crates/cut-optimization/src/: keys.rs  lib.rs
crates/cut-optimization/src/application/: mod.rs  solver.rs
crates/cut-optimization/src/domain/: assignment.rs  demand.rs  eligibility.rs  kerf.rs  mod.rs  objective.rs  offcut.rs  option.rs  plan.rs  provenance.rs
crates/cut-optimization/src/ports/: mod.rs  stock_catalog.rs
crates/design-standard/: Cargo.toml
crates/design-standard/src/: keys.rs  lib.rs
crates/design-standard/src/adapters/: mod.rs  nds_wood.rs  stubs.rs
crates/design-standard/src/application/: beam_statics.rs  mod.rs  sizing_arbiter.rs
crates/design-standard/src/domain/: connection.rs  factors.rs  limit_state.rs  mod.rs  philosophy.rs  section.rs  sizing.rs
crates/design-standard/src/ports/: design_standard.rs  mod.rs
crates/drawings-export/: Cargo.toml
crates/drawings-export/src/: keys.rs  lib.rs
crates/drawings-export/src/application/: mod.rs  projection.rs
crates/drawings-export/src/domain/: annotation.rs  mod.rs  sheet.rs  view.rs
crates/estimating/: Cargo.toml
crates/estimating/src/: keys.rs  lib.rs
crates/estimating/src/adapters/: mod.rs  rsmeans.rs
crates/estimating/src/application/: cost_rollup.rs  mod.rs  takeoff.rs
crates/estimating/src/domain/: catalog.rs  change_order.rs  classification.rs  estimate.rs  lines.rs  markup.rs  mod.rs  rollup.rs  takeoff.rs
crates/estimating/src/ports/: cost_benchmark.rs  mod.rs
crates/geometry-kernel/: Cargo.toml
crates/geometry-kernel/src/: brep.rs  curve.rs  lib.rs  plane.rs  rotation.rs  tick.rs  transform.rs  vector.rs
crates/loads-analysis/: Cargo.toml
crates/loads-analysis/src/: keys.rs  lib.rs
crates/loads-analysis/src/application/: load_path.rs  load_rollup.rs  load_solver.rs  mod.rs
crates/loads-analysis/src/domain/: combination.rs  demand.rs  mod.rs  sources.rs  tributary.rs
crates/materials/: Cargo.toml
crates/materials/src/: keys.rs  lib.rs
crates/materials/src/domain/: cut.rs  discriminators.rs  geometry.rs  mod.rs  pricing.rs  stock.rs  weight.rs
crates/reference-data/: Cargo.toml
crates/reference-data/src/: citation.rs  design_values.rs  keys.rs  lib.rs  prescriptive.rs  registry.rs
docs/: README.md
docs/adr/: 0001-monorepo-tooling-and-layout.md  0002-core-context-crate-layout-and-dependency-direction.md  0003-wasm-boundary-and-the-buffer-layout-keystone.md  0004-supporting-contexts-and-the-persistence-boundary.md  0005-frontend-application-stack-react-vite.md  0006-world-space-placement-engine-side.md  0007-space-first-modeling-footprint-push-pull.md  0008-mvp-geometry-and-command-contract.md  0009-parametric-junction-detailing.md  0010-product-design-skill.md  0011-advisory-ui-review-in-ci.md  0012-framing-slice-world-space-members.md  0012-tool-chrome-framework.md  0013-selection-model.md  0014-plan-inference-and-snapping-model.md  0015-footprint-editing-command.md
docs/analysis/: cross-schema-analysis.md  sketchup-tools-analysis.md  type-registry.json
docs/archive/: drawing-workspace-schema.html
docs/plans/: drawing-ux-mvp.md  footprint-editing.md  inference-engine.md  repo-scaffold.md  selection-model.md  wall-type-framing.md
docs/schema/: unified-schema.html
schema/: README.md
schema/model/: buffer-layouts.json  unified-model.json
tooling/codegen/: package.json
tooling/codegen/src/: index.ts
tooling/scripts/evals/: README.md  fixtures.json  rules-checklist.json
tooling/scripts/evals/status-text-units-and-noun/after/: status.tsx
tooling/scripts/evals/status-text-units-and-noun/before/: status.tsx
