# Rust workspace root (virtual manifest).
#
# Members land incrementally per docs/plans/repo-scaffold.md §8:
#   Phase 2 — geometry-kernel, reference-data (shared kernels)
#   Phase 3 — materials, building, loads-analysis, design-standard (core contexts)
#   Phase 4 — bim-core (composition root), bim-wasm (wasm-bindgen boundary)
# The supporting/backend crates land in Phase 5.
[workspace]
resolver = "3"
members = [
    "crates/geometry-kernel",
    "crates/reference-data",
    "crates/materials",
    "crates/building",
    "crates/loads-analysis",
    "crates/design-standard",
    "crates/bim-core",
    "crates/bim-wasm",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false

# Shared lints, inherited by every crate via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
