[package]
name = "building"
version = "0.0.0"
description = "Building Model + Placement context: semantic promotion (Wall/Opening/Junction) and per-instance member placement, with the FramingSolver."
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
geometry-kernel = { path = "../geometry-kernel" }
materials = { path = "../materials" }
