[package]
name = "drawings-export"
version = "0.0.0"
description = "Drawings Export context: the terminal stage — projection + hidden-line removal over the BREP solid, composed into permittable Sheets / DrawingSets."
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
geometry-kernel = { path = "../geometry-kernel" }
reference-data = { path = "../reference-data" }
