[package]
name = "materials"
version = "0.0.0"
description = "Materials & Stock context: material-agnostic raw stock, the cut/provenance chain, and the purchasable-SKU/price catalog."
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
geometry-kernel = { path = "../geometry-kernel" }
reference-data = { path = "../reference-data" }
